--- a/main.css
+++ b/main.css
@@ -1,3 +1,5 @@
+/* light blue: #24BBDA */
+
 .hideMe {
 	/*display:none;*/
 }
@@ -42,8 +44,8 @@ body {
     font-size: 25px;
     font-weight: 600;
 }
-.title .name .position {
-	color: #cccccc;
+.title .position {
+	color: #24BBDA;
 	font-size: 14px;
 	font-weight: 400;
 	display: block;
@@ -98,7 +100,7 @@ hr.dotted {
 }
 
 .section.personal-statement p{
-	text-align: justify;
+	/*text-align: justify;*/
 }
 
 .section .s-body .sub-head {
@@ -219,5 +221,3 @@ hr.dotted {
 .hobbies-interests .col-xs-3 .description {
 	margin-bottom: 20px;
 }
-
-
