--- a/main.css
+++ b/main.css
@@ -46,3 +46,16 @@ p {
 .nobr {
     white-space: nowrap;
 }
+
+hr {
+    border: none;
+    margin: 1.5rem 0;
+    border-bottom: 1px solid #ccc;
+    position: relative;
+    top: -1px;
+}
+
+.footer {
+    text-align: center;
+    font-size: 1rem;
+}
