--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,4 +37,10 @@
 
     gtag('config', 'UA-153670465-1');
   </script>
+
+  <!-- Mathjax Support -->
+  <script type="text/javascript" async
+    src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
+  </script>
+
 </head>
